hphp/hack/test/typecheck/attributes/reflection.php.exp
File "reflection.php", line 18, characters 26-37:
Invalid argument (Typing[4323])
File "reflection.hhi", line 77, characters 48-68:
Some type constraint(s) are violated here
File "reflection.hhi", line 77, characters 43-43:
T is a constrained type parameter
File "reflection.hhi", line 77, characters 48-68:
Expected HH\ClassLikeAttribute
File "reflection.php", line 18, characters 26-30:
But got FAttr
File "reflection.php", line 18, characters 26-30:
  where the class 'FAttr' was referenced here
